[gd_scene load_steps=3 format=2]

[ext_resource path="res://Perks/Jugger Juice.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 54.0093

[node name="JuggerJuice" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="queueFreeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="queueFreeTimer" to="." method="_on_queueFreeTimer_timeout"]
